Fix search button vertical alignment

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -1051,6 +1051,7 @@ div.help p {
 }
 #bigheadcontainer form > div {
   display: flex;
+  align-items: center;
 }
 .search-input,
 .search-submit {
